--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-Flask==3.0.0
-pandas==2.1.0
-numpy==1.24.3
-openpyxl==3.1.2
-xlsxwriter==3.1.2
-Werkzeug==3.0.0
-python-dateutil==2.8.2
+Flask==3.1.1
+pandas==2.3.0
+numpy==2.3.1
+openpyxl==3.1.5
+xlsxwriter==3.2.5
+Werkzeug==3.1.3
+python-dateutil==2.9.0.post0
+blinker==1.9.0
+click==8.2.1
+et_xmlfile==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+pytz==2025.2
+six==1.17.0
+tzdata==2025.2
